--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matias Franco",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-openid-connect": "^2.9.0"
