--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-openid-connect": "^2.9.0"
+    "express-openid-connect": "^2.9.0",
+    "mysql": "^2.18.1"
   }
 }
