--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "express-openid-connect": "^2.9.0",
+    "express-validator": "^6.14.2",
     "mysql": "^2.18.1"
   }
 }
